--- a/src/main/webapp/views/index.vm
+++ b/src/main/webapp/views/index.vm
@@ -1,1 +1,153 @@
-<h1>You Love Me !</h1>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="utf-8">
+<title>안산대진천막기업</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description"
+	content="행사용천막 렌탈, 캐노피, 어닝. 안산천막 각종파라솔 테이블 의자, 임대.">
+<meta name="author" content="karian7">
+
+<!-- Le styles -->
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<style type="text/css">
+body {
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
+
+section {
+	padding-top: 60px;
+}
+</style>
+<link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+
+<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+<!-- Le fav and touch icons -->
+<link rel="shortcut icon" href="/ico/favicon.ico">
+<link rel="apple-touch-icon-precomposed" sizes="114x114"
+	href="/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72"
+	href="/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed"
+	href="/ico/apple-touch-icon-57-precomposed.png">
+</head>
+<body>
+
+
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse"> <span class="icon-bar"></span> <span
+					class="icon-bar"></span> <span class="icon-bar"></span>
+				</a> <a class="brand" href="#">안산대진천막기업</a>
+				<div class="nav-collapse">
+					<ul class="nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+
+		<!-- Main hero unit for a primary marketing message or call to action -->
+		<div class="hero-unit">
+			<h1>안녕하세요! 안산대진천막 입니다.</h1>
+			<p>최선을 다해 모시겠습니다~^^</p>
+			<div class="row-fluid">
+				<div class="span8">
+					<object type='application/x-shockwave-flash' id='WevghuYC7os$'
+						width='642px' height='390px' align='middle'
+						classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000'
+						codebase='http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0'>
+						<param name='movie'
+							value='http://flvs.daum.net/flvPlayer.swf?vid=WevghuYC7os$' />
+						<param name='allowScriptAccess' value='always' />
+						<param name='allowFullScreen' value='true' />
+						<param name='bgcolor' value='#000000' />
+						<param name='wmode' value='opaque' />
+						<embed
+							src='http://flvs.daum.net/flvPlayer.swf?vid=WevghuYC7os$&informal=true&ver=0001&stype=m&barOff=true&autoplay=true'
+							width='642px' height='390px' allowScriptAccess='always'
+							type='application/x-shockwave-flash' allowFullScreen='true'
+							bgcolor='#000000'></embed>
+					</object>
+				</div>
+				<div class="span4 offset2">
+					<h3>전화로 문의해 주세요!</h3>
+					<div class="span2">
+						<h3>휴대폰</h3>
+						<h5>011-2601-8643</h5>
+					</div>
+					<div class="span2">
+						<h3>전화</h3>
+						<h5>031-492-8933</h5>
+					</div>
+					<div class="span2">
+						<h3>팩스</h3>
+						<h5>031-492-8935</h5>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Example row of columns -->
+		<section id="jobs">
+			<div class="page-header">
+				<h1>
+					주요업무 <small>천막관련 아래품목들을 대여해주고 있습니다.</small>
+				</h1>
+			</div>
+
+			<div class="row">
+				<div class="span4">
+					<h2>행사용 천막</h2>
+					<p></p>
+				</div>
+				<div class="span4">
+					<h2>캐노피</h2>
+					<p></p>
+				</div>
+				<div class="span4">
+					<h2>파라솔, 테이블, 의자</h2>
+					<p></p>
+				</div>
+			</div>
+		</section>
+
+		<section id="jobs">
+			<div class="page-header">
+				<h1>찾아오시는길</h1>
+			</div>
+
+			<div class="row">
+				<iframe width="800px" height="700px" scrolling="no" frameborder="0"
+					src="http://search.daum.net/search?w=tot&t__nil_searchbox=btn&sug=&q=%BE%C8%BB%EA%B4%EB%C1%F8%C3%B5%B8%B7"></iframe>
+			</div>
+		</section>
+
+		<hr>
+
+		<footer>
+			<p>&copy; 안산대진천막기업. | 대표자:김종환 | 사업자등록번호:14322-35973</p>
+			<p>주소:경기도 안산시 단원구 원곡동 997-3번지</p>
+		</footer>
+	</div>
+	<!-- /container -->
+
+	<!-- Le javascript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="/js/jquery-1.7.1.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+</html>
